# spdlog-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  justfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  disable-bench-deps.sh  install-deps.sh
benches/: common.rs  compare_with_cpp_spdlog.rs  compare_with_cpp_spdlog_async.rs  fern.rs  flexi_logger.rs  log4rs.rs  slog.rs  spdlog_rs.rs
benches/common/: mod.rs
docs/dev/benchmarks/: data.js
examples/: 01_default_logger.rs  02_building_logger.rs  03_file_sink.rs  04_rotating_file_sink.rs  05_custom_formatter.rs  07_async_pool_sink.rs
spdlog/: Cargo.toml  build.rs
spdlog-benches/: Cargo.toml  README.md
spdlog-benches/benches/: flexi_logger.rs  log4rs.rs  slog.rs
spdlog-benches/benches/common/: mod.rs
spdlog-benches/benches/fast_log/: 2_rotating_file_size_async.rs  4_level_off.rs
spdlog-benches/benches/ftlog/: main.rs
spdlog-benches/benches/spdlog-rs/: cmp_cpp.rs  kv.rs  log_crate_proxy.rs  pattern.rs  spdlog_rs.rs
spdlog-benches/src/: main.rs
spdlog-internal/: Cargo.toml  README.md
spdlog-internal/src/: lib.rs
spdlog-internal/src/pattern_parser/: error.rs  helper.rs  mod.rs  parse.rs  registry.rs
spdlog-macros/: Cargo.toml  README.md
spdlog-macros/src/: helper.rs  lib.rs  normalize_forward.rs  parse.rs  synthesis.rs
spdlog-macros/src/pattern/: mod.rs  synthesis.rs
spdlog-macros/tests/: basic.rs
spdlog/benches/: README.md  compare_with_cpp_spdlog.rs  compare_with_cpp_spdlog_async.rs  fern.rs  flexi_logger.rs  log4rs.rs  pattern.rs  slog.rs  spdlog_rs.rs  tracing.rs
spdlog/benches/common/: mod.rs
spdlog/benches/fast_log/: 1-file-async.rs  2_rotating_file_size_async.rs  3_rotating_daily_async.rs
spdlog/benches/fern/: 1_file.rs  2-level-off.rs
spdlog/benches/ftlog/: 1_file_async.rs  2-rotating-daily.rs  3-level-off.rs
spdlog/benches/logforth/: 1_file_async.rs  2-rotating-file-size-async.rs  3-rotating-daily-async.rs  4_level_off.rs
spdlog/benches/results/: chart-gen.py  data.toml
spdlog/benches/spdlog-rs/: cmp-cpp-async.rs  cmp-cpp.rs  cmp_cpp.rs  cmp_cpp_async.rs  compare_with_cpp_spdlog.rs  compare_with_cpp_spdlog_async.rs  kv.rs  log-crate-proxy.rs  log_crate_proxy.rs  pattern.rs  spdlog-rs.rs  spdlog_rs.rs
spdlog/examples/: 01_macro.rs  02-file.rs  02_building_logger.rs  02_file.rs  03-logger.rs  03_file_sink.rs  04-format.rs  04_format.rs  04_rotating_file_sink.rs  04_sink.rs  05_custom_formatter.rs  05_sink.rs  06_compatible_with_log_crate.rs  06_log_crate.rs  07-async.rs  07_async.rs  07_async_pool_sink.rs
spdlog/examples/native/: android.rs  linux.rs  windows.rs
spdlog/src/: env_level.rs  error.rs  kv.rs  level.rs  lib.rs  log_crate_proxy.rs  log_macros.rs  logger.rs  periodic_worker.rs  re_export.rs  record.rs  source_location.rs  string_buf.rs  sync.rs  terminal_style.rs  test_utils.rs  thread_pool.rs  utils.rs
spdlog/src/config/: deser.rs  mod.rs  parse.rs  registry.rs  source.rs
spdlog/src/formatter/: android_formatter.rs  full_formatter.rs  journal_formatter.rs  journald_formatter.rs  json_formatter.rs  local_time_cacher.rs  mod.rs  opt_formatter.rs  partial_formatter.rs  unreachable_formatter.rs
spdlog/src/formatter/pattern_formatter/: mod.rs  runtime.rs
spdlog/src/formatter/pattern_formatter/pattern/: datetime.rs  eol.rs  full.rs  kv.rs  level.rs  loc.rs  logger_name.rs  mod.rs  payload.rs  process_id.rs  srcloc.rs  style_range.rs  thread_id.rs
spdlog/src/formatter/pattern_formatter/patterns/: color_range.rs  datetime.rs  full.rs  level.rs  loc.rs  logger_name.rs  mod.rs  payload.rs  process_id.rs  style_range.rs  thread_id.rs
spdlog/src/formatter/utils/: cache.rs  mod.rs
spdlog/src/include/doc/: generic-builder-note.md  log-macro-named-opt-params.md  log-macro-nameed-opt-params.md  test_utils.rs
spdlog/src/sink/: android_sink.rs  dedup_sink.rs  file_sink.rs  helper.rs  journal_sink.rs  journald_sink.rs  mod.rs  rotating_file_sink.rs  std_stream_sink.rs  win_debug_sink.rs  write_sink.rs
spdlog/src/sink/async_sink/: async_pool_sink.rs  mod.rs
spdlog/src/test_utils/: common.rs  mod.rs  unit_test.rs
spdlog/src/utils/: mod.rs  ref_str.rs
spdlog/tests/: broken_stdio.rs  compile-fail.rs  compile_fail.rs  config.rs  global-async-pool-sink.rs  global_async_pool_sink.rs  log-crate-proxy.rs  log_crate_proxy.rs  pattern.rs
spdlog/tests/compile-fail/: logging-macro-syntax.rs  logging-macro-syntax.stderr  pattern-macro-syntax.rs  pattern-macro-syntax.stderr  pattern-runtime-disabled.stderr  pattern-runtime-macro-syntax.rs  pattern-runtime-macro-syntax.stderr
spdlog/tests/compile_fail/: logging_macro_syntax.stderr  pattern_macro_syntax.rs  pattern_macro_syntax.stderr  pattern_runtime_disabled.rs  pattern_runtime_disabled.stderr  pattern_runtime_macro_syntax.rs  pattern_runtime_macro_syntax.stderr
spdlog/tests/native/: README.md  android.sh  linux.sh  windows.sh
src/: env_level.rs  error.rs  level.rs  lib.rs  log_crate_proxy.rs  log_macros.rs  log_msg.rs  logger.rs  periodic_worker.rs  record.rs  source_location.rs  str_buf.rs  string_buf.rs  sync.rs  terminal.rs  terminal_style.rs  test_utils.rs  thread_pool.rs
src/formatter/: basic_formatter.rs  full_formatter.rs  journal_formatter.rs  mod.rs
src/formatter/pattern_formatter/: mod.rs
src/logger/: basic_logger.rs  mod.rs
src/sink/: file_sink.rs  helper.rs  journal_sink.rs  mod.rs  rotating_file_sink.rs  std_out_stream_sink.rs  std_out_stream_style_sink.rs  std_stream_sink.rs  stderr_sink.rs  stderr_style_sink.rs  stdout_sink.rs  stdout_style_sink.rs  win_debug_sink.rs  write_sink.rs
src/sink/async_sink/: async_pool_sink.rs  mod.rs
tests/: flexible_string.rs
tests/common/: flexible_string.in.rs
