[package]
name = "spdlog-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "spdlog"

[features]
level-off      = []
level-critical = []
level-error    = []
level-warn     = []
level-info     = []
level-debug    = []
level-trace    = []

release-level-off      = []
release-level-critical = []
release-level-error    = []
release-level-warn     = []
release-level-info     = []
release-level-debug    = []
release-level-trace    = []

source-location = []
flexible-string = []

[dependencies]
chrono = "0.4"
thiserror = "1.0"
atty = "0.2"
if_chain = "1.0"
lazy_static = "1.4"
cfg-if = "1.0"
spin = "0.9"
arc-swap = "1.5"
atomic = "0.5"
static_assertions = "1.1"

[dev-dependencies]
crossbeam = "0.8"
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4"
# The following dependencies are used for benchmarks
log = "0.4.14"
slog = "2.7.0"
sloggers = "2.1.1"
log4rs = "1.0.0"
fern = "0.6.0"
flexi_logger = "0.22.2"

[[bench]]
name = "compare_with_cpp_spdlog"
harness = false
