[package]
name = "spdlog-rs"
version = "0.2.3"
edition = "2021"
description = "A fast and combinable Rust logging crate, inspired by the C++ logging library spdlog"
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "spdlog"

[features]
level-off      = []
level-critical = []
level-error    = []
level-warn     = []
level-info     = []
level-debug    = []
level-trace    = []

release-level-off      = []
release-level-critical = []
release-level-error    = []
release-level-warn     = []
release-level-info     = []
release-level-debug    = []
release-level-trace    = []

source-location = []

[dependencies]
arc-swap = "1.5.0"
atomic = "0.5.1"
atty = "0.2.14"
cfg-if = "1.0.0"
chrono = "0.4.19"
flexible-string = { version = "0.1.0", optional = true }
if_chain = "1.0.2"
log = { version = "0.4", optional = true }
once_cell = "1.9.0"
spin = "0.9.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"

[target.'cfg(windows)'.dependencies]
crossterm = "0.23.0"
winapi = { version = "0.3.9", features = ["debugapi"] }

[dev-dependencies]
clap = { version = "3.0.13", features = ["derive"] }
crossbeam = "0.8.1"

# The following dependencies are used for benchmarks
log = "=0.4.14"
slog = "=2.7.0"
sloggers = "=2.1.1"
log4rs = "=1.0.0"
fern = "=0.6.0"
flexi_logger = "=0.22.2"

[build-dependencies]
rustc_version = "0.4.0"

[[bench]]
name = "compare_with_cpp_spdlog"
harness = false

[[example]]
name = "06_compatible_with_log_crate"
required-features = ["log"]
