[workspace]
resolver = "2"
members = [
    "spdlog",
    "spdlog-internal",
    "spdlog-macros",
]

[workspace.package]
edition = "2021"
rust-version = "1.71" # When updating this, also update: src/lib.rs, README.md
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[workspace.lints.clippy]
unused_trait_names = "warn"
