[package]
name = "spdlog-internal"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
description = "Internal private common code for crate \"spdlog-rs\""
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[dependencies]
nom = "8.0.0"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
thiserror = "2.0.0"
