[package]
name = "spdlog-internal"
version = "0.2.0"
description = "Internal private common code for crate \"spdlog-rs\""
readme = "crates-io.md"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nom = "8.0.0"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
thiserror = "2.0.0"
