[package]
name = "spdlog-internal"
version = "0.2.0"
description = "Internal private common code for crate \"spdlog-rs\""
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
nom = "8.0.0"
