[package]
name = "spdlog-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Macros implementation of crate \"spdlog-rs\""
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[lib]
proc-macro = true

[dependencies]
nom = "7.1.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "2.0.38", features = ["full"] }
