[package]
name = "spdlog-macros"
version = "0.3.0"
description = "Macros implementation of crate \"spdlog-rs\""
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
spdlog-internal = { version = "=0.2.0", path = "../spdlog-internal" }
syn = { version = "2.0.38", features = ["full"] }
