[package]
name = "spdlog-rs"
version = "0.4.3"
edition = "2021"
rust-version = "1.66.1"
description = "Fast, highly configurable Rust logging crate, inspired by the C++ logging library spdlog"
repository = "https://github.com/SpriteOvO/spdlog-rs"
license = "MIT OR Apache-2.0"
keywords = ["spdlog", "log", "logging"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "spdlog"

[features]
level-off      = []
level-critical = []
level-error    = []
level-warn     = []
level-info     = []
level-debug    = []
level-trace    = []

release-level-off      = []
release-level-critical = []
release-level-error    = []
release-level-warn     = []
release-level-info     = []
release-level-debug    = []
release-level-trace    = []

# Note: Sync the following features with `spdlog-benches/Cargo.toml`
source-location = []
native = []
libsystemd = ["dep:libsystemd-sys"]
android-ndk = ["dep:android_log-sys"]
multi-thread = ["dep:crossbeam"]
runtime-pattern = ["dep:spdlog-internal"]
serde = ["dep:serde", "value-bag/serde"]
serde_json = ["serde", "dep:serde_json"]
sval = ["value-bag/sval"]

[dependencies]
arc-swap = "1.5.1"
atomic = "0.5.1"
chrono = "0.4.22"
crossbeam = { version = "0.8.2", optional = true }
dyn-clone = "1.0.14"
flexible-string = { version = "0.1.0", optional = true }
is-terminal = "0.4"
log = { version = "0.4.21", optional = true, features = ["kv"] }
once_cell = "1.16.0"
parking_lot = "0.12.0"
serde = { version = "1.0.163", optional = true, features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }
spdlog-internal = { version = "=0.1.0", path = "../spdlog-internal", optional = true }
spdlog-macros = { version = "=0.2.0", path = "../spdlog-macros" }
thiserror = "2.0.0"
value-bag = { version = "1.11.1", features = ["owned", "inline-i128"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "debugapi", "handleapi", "processenv", "processthreadsapi", "winbase", "wincon"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd-sys = { version = "0.9.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = { version = "0.3.0", optional = true }

[dev-dependencies]
regex = "1.7.0"
trybuild = "1.0.90"
sval = "2.14.0"
sval_derive = "2.14.0"

[build-dependencies]
rustc_version = "0.4.0"

[[test]]
name = "global_async_pool_sink"
harness = false
required-features = ["multi-thread"]
[[test]]
name = "broken_stdio"
harness = false

[[example]]
name = "06_log_crate"
required-features = ["log"]
[[example]]
name = "07_async"
required-features = ["multi-thread"]
[[example]]
name = "native_linux"
path = "examples/native/linux.rs"
required-features = ["native", "libsystemd"]
[[example]]
name = "native_windows"
path = "examples/native/windows.rs"
required-features = ["native"]
[[example]]
name = "native_android"
path = "examples/native/android.rs"
required-features = ["native", "android-ndk"]
