[package]
name = "spdlog-rs"
version = "0.5.1"
description = "Fast, highly configurable Rust logging crate, inspired by the C++ logging library spdlog"
exclude = ["/benches"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
name = "spdlog"

[features]
level-off      = []
level-critical = []
level-error    = []
level-warn     = []
level-info     = []
level-debug    = []
level-trace    = []

release-level-off      = []
release-level-critical = []
release-level-error    = []
release-level-warn     = []
release-level-info     = []
release-level-debug    = []
release-level-trace    = []

std-stream-captured = []
source-location = []
native = []
libsystemd = ["dep:libsystemd-sys"]
android-ndk = ["dep:android_log-sys"]
multi-thread = ["dep:crossbeam"]
runtime-pattern = ["dep:spdlog-internal"]
serde = ["dep:serde", "value-bag/serde"]
serde_json = ["serde", "dep:serde_json"]
sval = ["value-bag/sval"]
log = ["dep:log", "dep:env_filter"]

[dependencies]
arc-swap = "1.5.1"
atomic = "0.6.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = "0.4.22"
crossbeam = { version = "0.8.2", optional = true }
dyn-clone = "1.0.14"
env_filter = { version = "0.1.0", optional = true }
flexible-string = { version = "0.1.0", optional = true }
is-terminal = "0.4"
log = { version = "0.4.21", optional = true, features = ["kv"] }
once_cell = "1.16.0"
parking_lot = "0.12.0"
serde = { version = "1.0.163", optional = true, features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }
spdlog-internal = { version = "=0.2.0", path = "../spdlog-internal", optional = true }
spdlog-macros = { version = "=0.3.0", path = "../spdlog-macros" }
thiserror = "2.0.0"
value-bag = { version = "1.11.1", features = ["owned", "inline-i128"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "debugapi", "handleapi", "processenv", "processthreadsapi", "winbase", "wincon"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd-sys = { version = "0.9.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = { version = "0.3.0", optional = true }

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = "0.8.2"
regex = "1.7.0"
paste = "1.0.14"
trybuild = "1.0.90"
sval = "2.14.0"
sval_derive = "2.14.0"

# [bench-dependencies]
log = "=0.4.28"
slog = "=2.7.0"
sloggers = "=2.2.0"
log4rs = "=1.4.0"
logforth = { version = "=0.27.0", features = ["append-rolling-file", "append-single-file"]}
fast_log = "=1.7.7"
fern = "=0.7.1"
flexi_logger = "=0.31.4"
ftlog = "=0.2.15"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.20"
tracing-appender = "=0.2.3"

[build-dependencies]
rustc_version = "0.4.0"

[[test]]
name = "global-async-pool-sink"
harness = false
required-features = ["multi-thread"]
[[test]]
name = "broken-stdio"
harness = false

[[bench]]
name = "spdlog-rs"
path = "benches/spdlog-rs/spdlog-rs.rs"
required-features = ["multi-thread"]
[[bench]]
name = "spdlog-rs-cmp-cpp"
path = "benches/spdlog-rs/cmp-cpp.rs"
harness = false
[[bench]]
name = "spdlog-rs-cmp-cpp-async"
path = "benches/spdlog-rs/cmp-cpp-async.rs"
harness = false
required-features = ["multi-thread"]
[[bench]]
name = "spdlog-rs-pattern"
path = "benches/spdlog-rs/pattern.rs"
required-features = ["runtime-pattern", "serde_json"]
[[bench]]
name = "spdlog-rs-log-crate-proxy"
path = "benches/spdlog-rs/log-crate-proxy.rs"
required-features = ["log"]
[[bench]]
name = "spdlog-rs-kv"
path = "benches/spdlog-rs/kv.rs"
[[bench]]
name = "fast_log"
path = "benches/fast_log/main.rs"
harness = false
[[bench]]
name = "fast_log-1-file-async"
path = "benches/fast_log/1-file-async.rs"
[[bench]]
name = "fast_log-2-rotating-file-size-async"
path = "benches/fast_log/2-rotating-file-size-async.rs"
[[bench]]
name = "fast_log-3-rotating-daily-async"
path = "benches/fast_log/3-rotating-daily-async.rs"
[[bench]]
name = "fast_log-4-level-off"
path = "benches/fast_log/4-level-off.rs"
[[bench]]
name = "fern"
path = "benches/fern/main.rs"
harness = false
[[bench]]
name = "fern-1-file"
path = "benches/fern/1-file.rs"
[[bench]]
name = "fern-2-level-off"
path = "benches/fern/2-level-off.rs"
[[bench]]
name = "ftlog"
path = "benches/ftlog/main.rs"
harness = false
[[bench]]
name = "ftlog-1-file-async"
path = "benches/ftlog/1-file-async.rs"
[[bench]]
name = "ftlog-2-rotating-daily"
path = "benches/ftlog/2-rotating-daily.rs"
[[bench]]
name = "ftlog-3-level-off"
path = "benches/ftlog/3-level-off.rs"
[[bench]]
name = "logforth"
path = "benches/logforth/main.rs"
harness = false
[[bench]]
name = "logforth-1-file-async"
path = "benches/logforth/1-file-async.rs"
[[bench]]
name = "logforth-2-rotating-file-size-async"
path = "benches/logforth/2-rotating-file-size-async.rs"
[[bench]]
name = "logforth-3-rotating-daily-async"
path = "benches/logforth/3-rotating-daily-async.rs"
[[bench]]
name = "logforth-4-level-off"
path = "benches/logforth/4-level-off.rs"

[[example]]
name = "06-log-crate"
required-features = ["log"]
doc-scrape-examples = true
[[example]]
name = "07-async"
required-features = ["multi-thread"]
doc-scrape-examples = true
[[example]]
name = "native-linux"
path = "examples/native/linux.rs"
required-features = ["native", "libsystemd"]
doc-scrape-examples = true
[[example]]
name = "native-windows"
path = "examples/native/windows.rs"
required-features = ["native"]
doc-scrape-examples = true
[[example]]
name = "native-android"
path = "examples/native/android.rs"
required-features = ["native", "android-ndk"]
doc-scrape-examples = true
